# graph-vae-subsampling

./: .gitignore  PLAN.md  README.md  pyproject.toml
experiments/: d1_dependence_power.py  d2_sbm_power.py  d2b_kill_or_confirm.py  d3_scaled.py  d3c_type1_diagnostic.py  d3d_definitive.py  d4_sensitivity.py  d5_realism.py  d5b_block_boundary.py  d6_learned_projection.py  e0_vgae_er.py  e1_er_downsample.py  e2_families_downsample.py  e3_decoder_ablation.py  e4_scale.py  m1_disentanglement.py
paper/: main.tex
research/dependence_testing/: README.md
research/dependence_testing/experiments/: d1_dependence_power.py  d2_sbm_power.py  d2b_kill_or_confirm.py  d3_scaled.py  d3c_type1_diagnostic.py  d3d_definitive.py  d4_sensitivity.py  d5_realism.py  d5b_block_boundary.py  d6_learned_projection.py  m1_disentanglement.py
research/dependence_testing/paper/: main.tex
research/dependence_testing/results/: d2_sbm_power.json  d2b_kill_or_confirm.json  d3_scaled.json  d3c_type1_diagnostic.json  d3d_definitive.json  d5_realism.json  d5b_block_boundary.json  d6_learned_projection.json  m1_disentanglement.json
research/subsampling/: README.md
research/subsampling/experiments/: e1_er_downsample.py  e2_families_downsample.py  e3_decoder_ablation.py  e4_scale.py  e5_coarsening.py  e6_learned_pooling.py
research/subsampling/results/: e0_vgae_er.json  e1_er_downsample.json  (+4 more)
results/: d1_dependence_power.json  d3_scaled.json  d4_sensitivity.json  e4_scale.json
src/deptest/: embeddings.py  pairs.py
src/subsampling/: baselines.py  coarsening.py  decoders.py  pooling.py
(+7 files in other folders)
