[project]
name = "gvs"
version = "0.1.0"
description = "Graph VAE subsampling: VGAE-based graph downsampling and embedding-based dependence testing"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.4",
    "torch-geometric>=2.6",
    "networkx>=3.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# gvs        = common library (shared by both research directions)
# subsampling = Thread-1 lib (latent decoders, classical samplers)
# deptest     = Thread-2 lib (graph-pair generators, dependence tests, embeddings)
packages = ["src/gvs", "src/subsampling", "src/deptest"]
